# lbflow

./: .gitignore  Cargo.toml  cargodoc_katex.sh
aux/: image_pre_processing.py
src/: cli.rs  constants.rs  functions.rs  io.rs  kernel.rs  lib.rs  main.rs  momentum.rs  parameters.rs  passive_scalar.rs  prelude.rs  prelude_crate.rs  simulation.rs  thermal.rs  velocity_set.rs
src/momentum/: bc.rs  io.rs  lattice.rs  legacy.rs  multiphase.rs  node.rs  post.rs
src/momentum/post/: vtk.rs
src/parameters/: functions.rs
src/passive_scalar/: adsorption.rs  bc.rs  io.rs  lattice.rs  node.rs
src/passive_scalar/post/: vtk.rs
src/velocity_set/: d2q5.rs  d2q9.rs  d3q15.rs  d3q19.rs  d3q27.rs
