[package]
name = "lbflow"
version = "0.1.0"
authors = ["Gilberto Ribeiro Pinto Júnior <g203324@dac.unicamp.br>"]
description = "Lattice Boltzmann solver developed in LESC - FEQ - UNICAMP"
edition = "2024"

[dependencies]
colored = "3.0.0"
rayon = "1.10.0"
regex = "1.11.1"
clap = { version = "4.5.45", features = ["cargo"] }
core_affinity = "0.8.3"
# rand = "0.9.2"
# nalgebra = "0.34.0"
# ndarray = "0.16.1"
# ndarray-linalg = "0.17.0"
